--- a/index.html
+++ b/index.html
@@ -181,37 +181,37 @@
             <div class="title">Наши партнёры</div>
             <button class="btn btn--partn" id="btnPartn">Показать всё</button>
             <div class="partners__table">
-                <img src="images/partn/россия страна возможностей.png" alt="Россия - страна возможностей" class="partners__img">
-                <img src="images/partn/тгту.png" alt="ТГТУ" class="partners__img">
-                <img src="images/partn/сбер.png" alt="Сюер" class="partners__img">
-                <img src="images/partn/ростелеком.png" alt="Ростелеком" class="partners__img">
-                <img src="images/partn/кванториум.png" alt="Кванториум" class="partners__img">
-                <img src="images/partn/яндекс лицей.png" alt="Яндекс.Лицей" class="partners__img">
-                <img src="images/partn/isoroc.png" alt="isoroc" class="partners__img">
-                <img src="images/partn/worldSkills.png" alt="WorldSkillds" class="partners__img">
-                <img src="images/partn/звезда.png" alt="Звезда" class="partners__img">
-                <img src="images/partn/крата.png" alt="Крата" class="partners__img">
-                <img src="images/partn/сколково.png" alt="Сколково" class="partners__img">
-                <img src="images/partn/тамак.png" alt="Тамак" class="partners__img">
-                <img src="images/partn/центр технологического образования.png" alt="центр технологического образования" class="partners__img">
-                <img src="images/partn/я профи.png" alt="Я - Профи" class="partners__img">
-                <img src="images/partn/техносфера.png" alt="Техносфера" class="partners__img">
-                <img src="images/partn/сгму.jpg" alt="СГМУ" class="partners__img">
-                <img src="images/partn/липецкий.png" alt="Липецкий университет" class="partners__img">
-                <img src="images/partn/ИиУ.jpeg" alt="Информатика и Управление" class="partners__img">
-                <img src="images/partn/воу.jpg" alt="Воронежский опорный университет" class="partners__img">
-                <img src="images/partn/бзск.jpg" alt="Бокинский завод строительных конструкций" class="partners__img">
-                <img src="images/partn/всерос.png" alt="Всероссийская олимпиада школьников" class="partners__img">
-                <img src="images/partn/курчатов.jpg" alt="Курчатов" class="partners__img">
-                <img src="images/partn/дубка.jpg" alt="Государственный университет 'Дубна'" class="partners__img">
-                <img src="images/partn/ноиб.jpg" alt="Инженерия будущего" class="partners__img">
-                <img src="images/partn/ргазу.png" alt="РГАЗУ" class="partners__img">
-                <img src="images/partn/чгпу.jpg" alt="ЧГПУ" class="partners__img">
-                <img src="images/partn/гау.jpg" alt="МичГАУ" class="partners__img">
-                <img src="images/partn/кфу.jpg" alt="КФУ" class="partners__img">
-                <img src="images/partn/мгу.png" alt="МГУ" class="partners__img">
-                <img src="images/partn/завком.jpg" alt="Завком" class="partners__img">
-                <img src="images/partn/росхимзащита.png" alt="Росхимзащита" class="partners__img">
+                <a href="https://rsv.ru/" class="partners__link"><img src="images/partn/россия страна возможностей.png" alt="Россия - страна возможностей" class="partners__img"></a>
+                <a href="https://tstu.ru/" class="partners__link"><img src="images/partn/тгту.png" alt="ТГТУ" class="partners__img"></a>
+                <a href="https://www.sberbank.ru/ru/person" class="partners__link"><img src="images/partn/сбер.png" alt="Сбер" class="partners__img"></a>
+                <a href="https://rt.ru/" class="partners__link"><img src="images/partn/ростелеком.png" alt="Ростелеком" class="partners__img"></a>
+                <a href="https://roskvantorium.ru/" class="partners__link"><img src="images/partn/кванториум.png" alt="Кванториум" class="partners__img"></a>
+                <a href="https://academy.yandex.ru/lyceum/" class="partners__link"><img src="images/partn/яндекс лицей.png" alt="Яндекс.Лицей" class="partners__img"></a>
+                <a href="https://www.msu.ru/index.php" class="partners__link"><img src="images/partn/мгу.png" alt="МГУ" class="partners__img"></a>
+                <a href="https://www.isoroc.ru/" class="partners__link"><img src="images/partn/isoroc.png" alt="isoroc" class="partners__img"></a>
+                <a href="https://krhz.ru/" class="partners__link"><img src="images/partn/росхимзащита.png" alt="Росхимзащита" class="partners__img"></a>
+                <a href="https://worldskills.ru/" class="partners__link"><img src="images/partn/worldSkills.png" alt="WorldSkillds" class="partners__img"></a>
+                <a href="https://zv.susu.ru/" class="partners__link"><img src="images/partn/звезда.png" alt="Звезда" class="partners__img"></a>
+                <a href="https://krata.ru/" class="partners__link"><img src="images/partn/крата.png" alt="Крата" class="partners__img"></a>
+                <a href="https://sk.ru/" class="partners__link"><img src="images/partn/сколково.png" alt="Сколково" class="partners__img"></a>
+                <a href="https://www.tamak.ru/" class="partners__link"><img src="images/partn/тамак.png" alt="Тамак" class="partners__img"></a>
+                <a href="https://yandex.ru/maps/org/tsentr_tekhnologicheskogo_obrazovaniya/213503695893/?ll=41.453684%2C52.724508&z=18" class="partners__link"><img src="images/partn/центр технологического образования.png" alt="центр технологического образования" class="partners__img"></a>
+                <a href="https://yandex.ru/profi/index" class="partners__link"><img src="images/partn/я профи.png" alt="Я - Профи" class="partners__img"></a>
+                <a href="" class="partners__link" id="technosphere"><img src="images/partn/техносфера.png" alt="Техносфера" class="partners__img"></a>
+                <a href="https://www.sstu.ru/" class="partners__link"><img src="images/partn/сгму.jpg" alt="СГМУ" class="partners__img"></a>
+                <a href="https://stu.lipetsk.ru/" class="partners__link"><img src="images/partn/липецкий.png" alt="Липецкий университет" class="partners__img"></a>
+                <a href="https://www.frccsc.ru/" class="partners__link"><img src="images/partn/ИиУ.jpeg" alt="Информатика и Управление" class="partners__img"></a>
+                <a href="https://cchgeu.ru/" class="partners__link"><img src="images/partn/воу.jpg" alt="Воронежский опорный университет" class="partners__img"></a>
+                <a href="https://bzsk68.ru/" class="partners__link"><img src="images/partn/бзск.jpg" alt="Бокинский завод строительных конструкций" class="partners__img"></a>
+                <a href="https://vos.olimpiada.ru/" class="partners__link"><img src="images/partn/всерос.png" alt="Всероссийская олимпиада школьников" class="partners__img"></a>
+                <a href="http://www.nrcki.ru/" class="partners__link"><img src="images/partn/курчатов.jpg" alt="Курчатов" class="partners__img"></a>
+                <a href="https://uni-dubna.ru/" class="partners__link"><img src="images/partn/дубна.jpg" alt="Государственный университет 'Дубна'" class="partners__img"></a>
+                <a href="https://nocsamara.ru/" class="partners__link"><img src="images/partn/ноциб.jpg" alt="НОЦ Инженерия будущего" class="partners__img"></a>
+                <a href="https://www.rgazu.ru/ru/" class="partners__link"><img src="images/partn/ргазу.png" alt="РГАЗУ" class="partners__img"></a>
+                <a href="https://chspu.ru/" class="partners__link"><img src="images/partn/чгпу.jpg" alt="ЧГПУ" class="partners__img"></a>
+                <a href="http://www.mgau.ru/" class="partners__link"><img src="images/partn/гау.jpg" alt="МичГАУ" class="partners__img"></a>
+                <a href="https://cfuv.ru/" class="partners__link"><img src="images/partn/кфу.jpg" alt="КФУ" class="partners__img"></a>
+                <a href="http://zavkomgroup.com/" class="partners__link"><img src="images/partn/завком.jpg" alt="Завком" class="partners__img"></a>
             </div>
         </div>
     </div>
