изменена фавиконка и добавлен sitemap

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#707070">
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
+    <link rel="icon" href="favicons/favicon.ico" type="image/x-icon">
 
     <meta name="description" content="Добро пожаловать в Центр компетенций Тамбовского Государственного Технического Университета. Мы помогаем оценить и развить ваши надпрофессиональные навыки, чтобы в будущем вы могли найти работу вашей мечты."/>
     <meta name="keywords" content="ТГТУ, Центр, навыки, кадры, студенты, Мероприятия"/>
