--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#707070">
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
-    <link rel="icon" href="favicons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <meta name="description" content="Добро пожаловать в Центр компетенций Тамбовского Государственного Технического Университета. Мы помогаем оценить и развить ваши надпрофессиональные навыки, чтобы в будущем вы могли найти работу вашей мечты."/>
     <meta name="keywords" content="ТГТУ, Центр, навыки, кадры, студенты, Мероприятия"/>
 
-    <meta name="robots" content="all"/>
+    <meta name="robots" content="noindex"/>
 
     <meta name="Author" content="Ярослав Аверин">
     <meta name="Copyright" content="Эдуард Злобин">
@@ -118,9 +118,9 @@
     <div class="container container--intro">
         <div class="intro__inner anim-items">
             <div class="intro__text">
-                <h2 class="intro__title">
+                <h1 class="intro__title">
                     Центр<br>компетенций
-                </h2>
+                </h1>
                 <h3 class="intro__subtitle">Тамбовский Государственный технический университет</h3>
             </div>
 
