--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Montserrat:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
-    <link rel="manifest" href="favicons/site.webmanifest">
-    <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#707070">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#7c7c7c">
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <meta name="description" content="Добро пожаловать в Центр компетенций Тамбовского Государственного Технического Университета. Мы помогаем оценить и развить ваши надпрофессиональные навыки, чтобы в будущем вы могли найти работу вашей мечты."/>
     <meta name="keywords" content="ТГТУ, Центр, навыки, кадры, студенты, Мероприятия"/>
@@ -96,7 +95,7 @@
     <div class="container">
         <div class="header__inner">
             <div class="header__logos">
-                <a href="" class="header__logo"></a>
+                <a href="https://ck-tstu.ru" class="header__logo"></a>
                 <a href="https://tstu.ru" class="header__logo header__logo--tstu"></a>
             </div>
 
